--- a/Makefile.frankfurt
+++ b/Makefile.frankfurt
@@ -57,23 +57,13 @@ DOCKER_REGISTRY = 974517877189.dkr.ecr.eu-central-1.amazonaws.com
 AWS_REGION_ECR := eu-central-1
 AUTHOR=$(USER)
 
-# Docker metadata
-INSIDE_DOCKER_IMAGE?=False
-ifeq ($(INSIDE_DOCKER_IMAGE), False)
-	GIT_HASH=$(shell git rev-parse HEAD)
-	GIT_HASH_SHORT=$(shell git rev-parse --short HEAD)
-	GIT_BRANCH=$(shell git symbolic-ref HEAD --short 2>/dev/null)
-	GIT_DIRTY=$(shell git status --porcelain)
-	GIT_TAG=$(shell git describe --tags || echo "no version info")
-	DOCKER_IMG_LOCAL_TAG=$(DOCKER_REGISTRY)/$(SERVICE_NAME):local-$(USER)-$(GIT_HASH_SHORT)
-else
-	GIT_HASH=unknown
-	GIT_HASH_SHORT=unknown
-	GIT_BRANCH=unknown
-	GIT_DIRTY=unknown
-	GIT_TAG=unknown
-	DOCKER_IMG_LOCAL_TAG=$(DOCKER_REGISTRY)/$(SERVICE_NAME):local-$(USER)-$(GIT_HASH_SHORT)
-endif
+# Git metadata
+GIT_HASH=$(shell git rev-parse HEAD)
+GIT_HASH_SHORT=$(shell git rev-parse --short HEAD)
+GIT_BRANCH=$(shell git symbolic-ref HEAD --short 2>/dev/null)
+GIT_DIRTY=$(shell git status --porcelain)
+GIT_TAG=$(shell git describe --tags || echo "no version info")
+DOCKER_IMG_LOCAL_TAG=$(DOCKER_REGISTRY)/$(SERVICE_NAME):local-$(USER)-$(GIT_HASH_SHORT)
 
 # Colors
 ifneq ($(shell echo ${TERM}),)
